[#238] Finish the transition process of splitting the group record and membership list on two separate collections (#243)
* begin removing embedded group members

* Add membership filter to the new api

* Rework storage to use group_memberships collection

* Partial redo for backward compilability and more changes for the transition

* Small cleanup and reorganize

* Attempt to merge Group & GroupV2

* Move current user membership login down to the storage

* Change groupID to a list if group ids and move it into the filter

* Additional changes for backward compatibility

* Rafactor inner structure and interfaces

* Fix lint warnings

* Resolve migration issue and wrong type set

* Increment version

* Fix data migration

* Update changelog

* Remove categories, because this enum is not used at all for quite a long time

* Wrap delete within transaction

* Check for nil filter

* Memberships filter should be user with at least one filter as a minimum.

* Fix critical delete membership issue

* Update changelog

* Remove unused structs

* Additional fixes and improvements related global Authman synchronization

* Fix lint issue

* Redo bad commit

* Set correct bool flag for admin

* No more required. The memberships have been transitioned to separate collection

* Cleanup

* Fix compile issue

* Reorganize membership CRUD operations

* Get from develop. 1

* Get from develop 2

* Dont mess prev declaration

* Remove GroupV2 and fix variable visibility

* Regenrate api doc

* Set as null instead of an empty array

* Update changelog

* Remove unused method

* Fix broken apis

* Remove wrong break

* Fix broken react to post api call

* Add  more membership indexes

* Take out pending and rejected from total count

* Fix update membership permission

* Remove misleading changelog

* Remove redundant and legacy logic

* it's not used any more.

* Store group stats #227

* A
