# driver/web/rest/adminapis-v2.go
@@ -22,7 +22,7 @@ import (
 // @Param offset query string false "offset - skip number of records"
 // @Param limit query string false "limit - limit the result"
 // @Param include_hidden query string false "include_hidden - Includes hidden groups if a search by title is performed. Possible value is true. Default false."
-// @Success 200 {array} model.GroupV2
+// @Success 200 {array} model.Group
 // @Security AppUserAuth
 // @Router /api/admin/v2/groups [get]
 func (h *AdminApisHandler) GetGroupsV2(clientID string, current *model.User, w http.ResponseWriter, r *http.Request) {
@@ -84,12 +84,7 @@ func (h *AdminApisHandler) GetGroupsV2(clientID string, current *model.User, w h
 		return
 	}
 
-	groupsV2 := make([]model.GroupV2, len(groups))
-	for i, group := range groups {
-		groupsV2[i] = group.ToGroupV2(&current.ID)
-	}
-
-	data, err := json.Marshal(groupsV2)
+	data, err := json.Marshal(groups)
 	if err != nil {
 		log.Println("apis.GetGroupsV2() error on marshal the groups items")
 		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
@@ -113,7 +108,7 @@ func (h *AdminApisHandler) GetGroupsV2(clientID string, current *model.User, w h
 // @Param privacy query string false "privacy - filter by privacy"
 // @Param offset query string false "offset - skip number of records"
 // @Param limit query string false "limit - limit the result"
-// @Success 200 {array} model.GroupV2
+// @Success 200 {array} model.Group
 // @Security AppUserAuth
 // @Security APIKeyAuth
 // @Router /api/admin/v2/user/groups [get]
@@ -168,12 +163,7 @@ func (h *AdminApisHandler) GetUserGroupsV2(clientID string, current *model.User,
 		return
 	}
 
-	groupsV2 := make([]model.GroupV2, len(groups))
-	for i, group := range groups {
-		groupsV2[i] = group.ToGroupV2(&current.ID)
-	}
-
-	data, err := json.Marshal(groupsV2)
+	data, err := json.Marshal(groups)
 	if err != nil {
 		log.Println("apis.GetUserGroupsV2() error on marshal the user groups items")
 		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
@@ -192,35 +182,34 @@ func (h *AdminApisHandler) GetUserGroupsV2(clientID string, current *model.User,
 // @Accept json
 // @Param APP header string true "APP"
 // @Param id path string true "ID"
-// @Success 200 {object} model.GroupV2
+// @Success 200 {object} model.Group
 // @Security AppUserAuth
 // @Router /api/admin/v2/groups/{id} [get]
 func (h *AdminApisHandler) GetGroupV2(clientID string, current *model.User, w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
 	id := params["id"]
 	if len(id) <= 0 {
-		log.Println("apis.GetGroupV2() id is required")
+		log.Println("adminapis.GetGroupV2() id is required")
 		http.Error(w, "id is required", http.StatusBadRequest)
 		return
 	}
 
-	//check if allowed to see the events for this group
-	group, err := h.app.Services.GetGroupEntity(clientID, id)
+	group, err := h.app.Services.GetGroup(clientID, current, id)
 	if err != nil {
-		log.Printf("apis.GetGroupV2() error getting a group - %s", err.Error())
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		log.Printf("adminapis.GetGroupV2() error on getting group %s - %s", id, err)
+		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
 		return
 	}
 
-	if !hasGroupMembershipPermission(h.app.Services, w, current, clientID, group) {
+	if group == nil {
+		log.Printf("adminapis.GetGroupV2() group %s not found", id)
+		http.Error(w, http.StatusText(http.StatusNotFound), http.StatusNotFound)
 		return
 	}
 
-	groupV2 := group.ToGroupV2(&current.ID)
-
-	data, err := json.Marshal(groupV2)
+	data, err := json.Marshal(group)
 	if err != nil {
-		log.Println("apis.GetGroupV2() error on marshal the group")
+		log.Println("adminapis.GetGroupV2() error on marshal the group")
 		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
 		return
 	}
